503 should be in the list of Retry-After codes